# rag-ingestor

./: .env.dist  .gitignore  README.md  pyproject.toml  todo.md
docs/: ingestion_worker.md
docs/functional-specs/: 00-rag-manager.md
docs/technical/: architecture.md  class_diagram.md  sequence_diagrams.md
src/rag_ingest/: __init__.py  config.py  db.py  ingestor.py  models.py  repository.py  worker.py
src/rag_ingest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rag_ingest/entity/: __init__.py  document_node.py  ingestion_log.py  ingestion_queue_item.py  queue_status.py
src/rag_ingest/orm/: __init__.py  config.py  db.py
src/rag_ingest/repository/: __init__.py  ingestion_log_repo.py  ingestion_queue_item_repo.py
src/rag_ingest/services/: __init__.py  embed_provider.py  llm_provider.py  rag_provider.py  vlm_provider.py
src/rag_ingest/services/embed/: __init__.py  embed_provider.py
src/rag_ingest/services/llm/: __init__.py  llm_provider.py
src/rag_ingest/services/utils/: __init__.py  async_mixin.py
src/rag_ingest/services/vlm/: __init__.py  vlm_provider.py
src/tests/: test_repository.py  test_worker.py
